Fixed for mobile

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="container mx-auto px-6 relative z-10">
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="text-white space-y-6">
-                    <h1 class="text-5xl md:text-7xl font-bold leading-tight">
+                    <h1 class="text-5xl md:text-7xl mt-36 font-bold leading-tight">
                         Your Journey to 
                         <span class="text-vital-green">Recovery</span> 
                         Starts Here
@@ -143,8 +143,8 @@
                 <div class="relative">
                     <img src="https://images.unsplash.com/photo-1576091160550-2173dba999ef?w=600&h=600&fit=crop&crop=center" 
                          alt="Modern Physiotherapy Treatment" 
-                         class="rounded-3xl shadow-2xl w-full max-w-md mx-auto">
-                    <div class="absolute -bottom-6 -right-6 bg-vital-green text-vital-dark p-6 rounded-2xl shadow-xl">
+                         class="rounded-3xl shadow-2xl w-full max-w-md mx-auto sm:max-w-md max-w-xs">
+                    <div class="absolute -bottom-6 -right-6 mr-10 bg-vital-green text-vital-dark p-6 rounded-2xl shadow-xl">
                         <div class="text-3xl font-bold"><i class="fas fa-heart"></i></div>
                         <div class="text-sm">Expert Care</div>
                     </div>
@@ -254,7 +254,7 @@
                     <img src="https://images.unsplash.com/photo-1571019613454-1cb2f99b2d8b?w=600&h=400&fit=crop&crop=center" 
                          alt="Modern Physiotherapy Facility" 
                          class="rounded-3xl shadow-2xl w-full">
-                    <div class="absolute -top-8 -left-8 bg-vital-green text-vital-dark p-6 rounded-2xl shadow-xl">
+                    <div class="absolute -top-8 -left-8 sm:ml-0 ml-10 bg-vital-green text-vital-dark p-6 rounded-2xl shadow-xl">
                         <i class="fas fa-shield-alt text-3xl mb-2"></i>
                         <div class="text-sm font-semibold">Trusted Care</div>
                     </div>
